# roctokit

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: client.rs  lib.rs  tests.rs
src/client/: github_client.rs  mod.rs  organizations.rs
src/clients/: api.rs  mod.rs  organizations.rs  repositories.rs
src/model/: mod.rs
src/tests/: e2e_readonly_tests.rs  mod.rs  organization_tests.rs  repository_tests.rs
