[package]
name = "roctokit"
version = "0.0.1"
authors = ["jburger <defence-in-depth@protonmail.com"]
description = "[Pre-release] Comprehensive Rust wrapper for the Github API v3"
repository = "https://github.com/jburger/roctokit"
license = "https://github.com/jburger/roctokit/blob/master/LICENSE"
keywords = ["github", "api", "client", "v3", "roctokit"]

[dependencies]
futures = "0.1.27"
serde = "1.0.92"
serde_json = "1.0.39"
reqwest = "0.9.18"
chrono = "0.4.6"
regex = "1.1.7"